fixed alignmint

--- a/styles/main_v2.css
+++ b/styles/main_v2.css
@@ -632,5 +632,5 @@ html {
     display:none !important;
 }
 #lblSignup, #ssointro, #NovartisExchange {
-    margin-top: 16px !important;
+   float:left;
 }
